# trebuchet

./: .eslintignore  .eslintrc.json  .gitignore  .yarnrc.yml  LICENSE  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_handle.rs  command.rs  error.rs  main.rs  query_stats.rs  xray.rs
src-tauri/src/command/: endpoint.rs  mod.rs  query_stats.rs  subscription.rs
src-tauri/src/db/: base64.rs  endpoint.rs  flow.rs  log.rs  mod.rs  settings.rs  subscription.rs  website.rs
src-tauri/src/timers/: subscription.rs
src-tauri/src/xray/config/: api.rs  log.rs  mod.rs  transport.rs
src/api/: SimpleQueue.ts  bindings.ts  currentEndpoint.ts  endpointTest.ts  getPortNumber.ts  randomid.ts  settings.ts  subscription.ts  updatingSubs.ts  useEvent.ts  useInputBox.ts  useStats.ts  useSubscribe.ts  useSubscriptionUpdating.ts
src/api/protocols/: vmess.ts
src/api/xray/: config.ts  xray.ts
src/api/xray/config/: api.ts  dns.ts  inbound.ts  index.ts  log.ts  outbound.ts  policy.ts  routing.ts  stats.ts
src/api/xray/config/inbounds/: dokodemo.ts  http.ts  socks.ts
src/api/xray/config/outbounds/: blackhole.ts  freedom.ts  shadowsocks.ts  trojan.ts  vless.ts  vmess.ts
src/api/xray/config/transports/: domainsocket.ts  grpc.ts  h2.ts  index.ts  mkcp.ts  quic.ts  tcp.ts  websocket.ts
src/api/xray/protocols/: shadowsocks.ts  trojan.ts  vless.ts  vmess.ts
src/components/: Alert.tsx  CommandButton.tsx  ConnectionState.tsx  EndpointList.tsx  FlowChart.tsx  InputBoxProvider.tsx  LatencyBadge.tsx  LinkMenuItem.tsx  MaterialSymbol.tsx  Speedometer.tsx  Stack.tsx  SubscriptionDialog.tsx  SubscriptionList.tsx  SubscriptionTable.tsx  TextField.tsx  TextInput.tsx  WebsiteDialog.tsx  WebsiteSelectDialog.tsx
src/db/: endpoint.ts  flowLog.ts  index.ts  logEntry.ts  subscription.ts  useListenDbChange.ts  website.ts
src/pages/: EndpointPage.tsx  GeneralPage.tsx  LogPage.tsx  RulePage.tsx  SubscriptionPage.tsx
