[package]
name = "trebuchet"
version = "0.0.0"
description = "Project Trebuchet"
authors = ["karoyqiu@gmail.com"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["window-show"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.18", features = ["deflate", "brotli", "gzip"] }
anyhow = "1.0.75"
thiserror = "1.0.47"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
