[package]
name = "trebuchet"
version = "1.3.0"
description = "Project Trebuchet"
authors = ["karoyqiu@gmail.com"]
license = "MIT"
repository = "https://github.com/karoyqiu/trebuchet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
anyhow = "1.0.75"
base64 = "0.22.1"
log = "0.4.22"
ormlite = { version = "0.18.0", features = ["sqlite"] }
reqwest = { version = "0.11.18", features = ["deflate", "brotli", "gzip", "socks"] }
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "1.0.5"
tauri = { version = "1.7", features = ["cli", "fs-remove-file", "fs-write-file", "os-all", "path-all", "shell-sidecar", "system-tray", "window-show"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-specta = { version = "1.0.2", features = ["typescript"] }
thiserror = "1.0.47"
tokio = { version = "1.32", default-features = false, features = ["fs"] }
tokio-js-set-interval = "1.3.0"
tokio_schedule = "0.3.2"
uri_parser = "0.2.0"
urlencoding = "2.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
